--- a/date.html
+++ b/date.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="css/date.css" />
   </head>
   <body>
-    <h1 title="choose a date">Are you free on ...</h1>
+    <h1 title="choose a date">When are you free...</h1>
     <form class="form-group">
-      <label>Which day: (select a date cuite.. )</label>
+      <label>Select a date cutu...(pliss avoid 15 & 16)</label>
       <div>
         <input type="date" />
-        <button class="button" type="submit" formaction="food.html">
+        <button class="button" type="submit" formaction="activities.html">
           Submit
         </button>
       </div>
