--- a/lastpage.html
+++ b/lastpage.html
@@ -4,11 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/flower.css" />
+    <!-- <link rel="stylesheet" href="css/flower.css" /> -->
+    <link rel="stylesheet" href="css/lastpage.css" />
   </head>
   <body>
-    <div id="thankyou"><b>Thank you for being my girlfriend</b></div>
-    <div class="flower">
+    <div id="thankyou"><b>Hehe 🤭, look at us together...</b></div>
+    <label
+      >Even in the mirror, I look for you (I might get bored of me, not
+      you)</label
+    >
+    <br />
+    <br />
+    <img
+      height="400px"
+      id="rizz"
+      src="together.jpeg"
+      alt="rizzler god"
+      class="responsive"
+    />
+    <br />
+    <!-- <audio controls autoplay loop>
+      <source src="congratulations.mp3" type="audio/mpeg" />
+      Your browser does not support the audio element.
+    </audio> -->
+    <br />
+
+    <!-- <div class="flower">
       <div class="f-wrapper">
         <div class="flower__line"></div>
         <div class="f">
@@ -24,39 +45,30 @@
           ></div>
         </div>
       </div>
-
-      <div class="f-wrapper f-wrapper--2">
-        <div class="flower__line"></div>
-        <div class="f">
-          <div class="flower__leaf flower__leaf--1"></div>
-          <div class="flower__leaf flower__leaf--2"></div>
-          <div class="flower__leaf flower__leaf--3"></div>
-          <div class="flower__leaf flower__leaf--4"></div>
-          <div class="flower__leaf flower__leaf--5"></div>
-          <div class="flower__leaf flower__leaf--6"></div>
-          <div class="flower__leaf flower__leaf--7"></div>
-          <div
-            class="flower__leaf flower__leaf--8 flower__fall-down--pink"
-          ></div>
-        </div>
-      </div>
-
-      <div class="f-wrapper f-wrapper--3">
-        <div class="flower__line"></div>
-        <div class="f">
-          <div class="flower__leaf flower__leaf--1"></div>
-          <div class="flower__leaf flower__leaf--2"></div>
-          <div class="flower__leaf flower__leaf--3"></div>
-          <div class="flower__leaf flower__leaf--4"></div>
-          <div class="flower__leaf flower__leaf--5"></div>
-          <div class="flower__leaf flower__leaf--6"></div>
-          <div class="flower__leaf flower__leaf--7"></div>
-          <div
-            class="flower__leaf flower__leaf--8 flower__fall-down--purple"
-          ></div>
-        </div>
-      </div>
       <div class="flower__glass"></div>
-    </div>
+    </div> -->
+
+    <!-- WhatsApp Button -->
+    <button id="whatsapp-button" class="button">Click here buddhu...</button>
+
+    <script>
+      // Retrieve selected activities from localStorage
+      const selectedActivities =
+        JSON.parse(localStorage.getItem("selectedActivities")) || [];
+
+      // Create WhatsApp message and link
+      const whatsappButton = document.getElementById("whatsapp-button");
+      whatsappButton.addEventListener("click", () => {
+        const message = `Hi Veenu! Plan a day for me and Gunnu, here's my preference:\n\n${selectedActivities.join(
+          ", "
+        )}\n\nSo excited! <3`;
+
+        const whatsappNumber = "9958034627";
+        const whatsappLink = `https://wa.me/${whatsappNumber}?text=${encodeURIComponent(
+          message
+        )}`;
+        window.open(whatsappLink, "_blank");
+      });
+    </script>
   </body>
 </html>
