--- a/thankyou.html
+++ b/thankyou.html
@@ -7,17 +7,24 @@
     <link rel="stylesheet" href="css/lastpage.css" />
   </head>
   <body>
-    <div id="thankyou"><b>Thank you</b></div>
+    <div id="thankyou"><b>😌 Thank you</b></div>
 
-    <img height="300px" id="rizz" src="thanks.png" alt="rizzler god" class="responsive" />
-    <br />
-    <audio controls autoplay loop>
-      <source src="congratulations.mp3" type="audio/mpeg" />
-      Your browser does not support the audio element.
-    </audio>
+    <!-- Video element replacing the image and audio -->
+    <video
+      id="thankyou-video"
+      width="280px"
+      height="500px"
+      autoplay
+      loop
+      controls
+    >
+      <source src="thankyou_video.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+
     <h1>Don't go yet!</h1>
     <button class="button" onclick="location.href='date.html'">
-      Click me heheehe... 
+      Click me heheehe...
     </button>
   </body>
 </html>
