--- a/activities.html
+++ b/activities.html
@@ -46,7 +46,7 @@
       </div>
     </div>
     <button class="button" onclick="saveSelectionsAndRedirect()">
-      Last page ...
+      Book my day!
     </button>
 
     <script>
